[tool.poetry]
name = "groundlight_light_alert"
version = "0.1.0"
description = ""
authors = ["brandon <brandon@groundlight.ai>"]
readme = "README.md"
packages = [{include = "groundlight_light_alert"}]

[tool.poetry.dependencies]
python = "^3.11"
groundlight = "^0.18.0"
pygame = "^2.6.1"
pydub = "^0.25.1"
tinytuya = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
